--- a/package.json
+++ b/package.json
@@ -9,33 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "next-themes": "^0.2.1",
-    "lucide-react": "^0.294.0",
-    "@supabase/supabase-js": "^2.38.0",
-    "@supabase/ssr": "^0.4.0",
-    "@supabase/auth-helpers-nextjs": "^0.8.2",
-    "tailwindcss-animate": "^1.0.7",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-select": "^2.0.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.2",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.38.0",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.0",
+    "next-themes": "^0.2.1",
+    "react": "^18",
+    "react-dom": "^18",
     "recharts": "^2.8.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5"
   }
 }
